<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Road Safety Camera Location</string>
    <string name="action">Sort</string>
    <string name="search">Search</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="login_fail">Login Fail</string>
    <string name="login_success">Login Success</string>
    <string name="register_fail">Register Fail</string>
    <string name="register_success">Register Success</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="create_account">Create Account</string>
    <string name="login_waring">E-mail/Password Not Empty !</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
